switch from toolchains to profiles to fix build on travis